fix for spacing

--- a/media/_themes/unm-v1-2col/media-screen-breakpoints/large.css.d/body-2col.css
+++ b/media/_themes/unm-v1-2col/media-screen-breakpoints/large.css.d/body-2col.css
@@ -2,6 +2,7 @@
   .digraph-area-wrapper {
     display: flex;
     justify-content: space-around;
+    padding: 0 $(spacing_base);
   }
 }
 
